Fix overlap in header for drag ink

--- a/src/styles/list-flex-col.scss
+++ b/src/styles/list-flex-col.scss
@@ -102,7 +102,7 @@ $__item-ink--width: 4px;
     height: 2px;
     width: 0;
     background-color: $__drag-target-ink--color;
-    z-index: 10;
+    z-index: 1;
 
     &::before {
       @extend %fast-transition;
